--- a/ProyectoIntegrador/src/app/pages/usuarios/usuarios.component.css
+++ b/ProyectoIntegrador/src/app/pages/usuarios/usuarios.component.css
@@ -1,27 +1,153 @@
-html{
+html {
     scroll-behavior: smooth;
 }
 
+body {
+    background: radial-gradient(at top, #000000, #2E4053);
+    width: 100%;
+    max-width: 100%;
+}
 
-.logo{
+.logo {
     z-index: 0;
 }
-.navbar{ z-index: 1;    position: static; font-family: "FIFA Welcome"; font-size: 18px}
-.btn{
-    font-family: "FIFA Welcome"; font-size: 20px; 
+
+.navbar {
+    z-index: 1;
+    position: static;
+    font-family: "FIFA Welcome";
+    font-size: 18px
 }
-.bg-light{
-    background: linear-gradient(#0d0f13 ,#2E4053 );
+
+.btn {
+    font-family: "FIFA Welcome";
+    font-size: 20px;
+}
+
+.bg-light {
+    background: linear-gradient(#0d0f13, #2E4053);
     border-radius: 25px;
 }
-.nav-item{
+
+.nav-item {
     padding: 0px 20px;
 }
-.nav-item:first-child{
+
+.nav-item:first-child {
     border-right: #2E4053 solid 1px;
 }
 
-.tablaI{
+
+
+.tTienda {
+    font-family: "FIFA Welcome";
+    color: white;
+    font-size: 65px;
+}
+
+.container1 {
+    margin: auto;
+    width: 100%;
+    max-width: 900px;
+}
+
+.container2 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-family: "FIFA Welcome";
+    width: 100%;
+    max-width: 100%;
+    padding: 20px;
+}
+
+.Help {
+    text-align: center;
+}
+
+.Informacion {
+    display: flex;
+}
+
+.image-1 {
+    filter: hue-rotate(1500deg) brightness(60%);
+}
+
+.izquierda {
+    text-align: left;
+    text-align: center;
+    width: 100%;
+    max-width: 1000px;
+}
+
+.lead {
+    text-align: center;
+    padding: 10px;
+}
+
+.derecha {
+    text-align: right;
+    text-align: center;
+    width: 100%;
+    max-width: 1000px;
+}
+
+.container3 {
+    background-color: #ffffff;
+    width: 100%;
+    max-width: 1500px;
+
+}
+
+.infocontacto {
+    margin-top: 50px;
+    background-color: #e4e4e2;
+    font-family: "FIFA Welcome";
+}
+
+.media {
+    padding: 15px;
+}
+
+footer {
+    background-color: white;
+    font-family: "FIFA Welcome";
+    font-size: 19px;
+}
+
+.pie {
+    margin: auto;
+    background-color: black;
+    font-family: "FIFA Welcome";
+    font-size: 15px;
+    width: 40%;
+    max-width: 400px;
+}
+
+.titulo1 {
+    color: white;
+    border-radius: 15px;
+    padding-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding-bottom: 10px;
+    font-family: "FIFA Welcome";
+}
+
+
+.card1 {
+    border-radius: 15px;
+    font-family: "FIFA Welcome";
+    background-color: #000000;
+}
+
+.campos {
+    font-size: 20px;
+}
+
+
+.tablaI {
     border-radius: 15px;
     font-family: "FIFA Welcome";
     background-color: #19212b;
@@ -33,31 +159,35 @@ html{
     margin-bottom: 30px;
 }
 
-.clId{
+.clId {
     color: rgb(20, 238, 56);
 }
 
-.mt-0{
+.mt-0 {
     padding-left: 10px;
 }
-.contactfondo{
-    background: rgb(219,219,219);
-    background: linear-gradient(0deg, rgba(219,219,219,1) 0%, rgba(233,233,229,1) 100%);
+
+.contactfondo {
+    background: rgb(219, 219, 219);
+    background: linear-gradient(0deg, rgba(219, 219, 219, 1) 0%, rgba(233, 233, 229, 1) 100%);
 }
-.display-4{
+
+.display-4 {
     display: flex;
     justify-content: center;
 }
-.fs-3{
-    background: rgb(23,90,153);
-    background: linear-gradient(0deg, rgba(23,90,153,1) 0%, rgba(0,0,0,1) 0%, rgba(29,112,175,1) 0%, rgba(22,32,65,1) 100%);
+
+.fs-3 {
+    background: rgb(23, 90, 153);
+    background: linear-gradient(0deg, rgba(23, 90, 153, 1) 0%, rgba(0, 0, 0, 1) 0%, rgba(29, 112, 175, 1) 0%, rgba(22, 32, 65, 1) 100%);
     color: #ffffff;
 }
-.form-control1{
+
+.form-control1 {
     padding-bottom: 80px;
 }
 
-.desEstyle{
+.desEstyle {
     color: white;
     font-family: "FIFA Welcome";
     font-size: 20px;
@@ -65,19 +195,19 @@ html{
     margin-bottom: -40px;
 }
 
-.titulodes{
+.titulodes {
     margin-left: -100px;
     margin-top: 10px;
     margin-bottom: -10px;
 }
 
-.titulocom{
+.titulocom {
     margin-left: -80px;
     margin-top: 15px;
     margin-bottom: -10px;
 }
 
-.titulo2{
+.titulo2 {
     color: white;
     border-radius: 15px;
     padding-top: 10px;
@@ -88,3 +218,64 @@ html{
     padding-bottom: 10px;
     font-family: "FIFA Welcome";
 }
+
+
+.boton-buscar {
+    background-color: #4CAF50;
+    /* Color de fondo */
+    border: none;
+    /* Sin bordes */
+    color: white;
+    /* Color del texto */
+    padding: 15px 32px;
+    /* Espaciado alrededor del texto */
+    text-align: center;
+    /* Alineación del texto */
+    text-decoration: none;
+    /* Sin subrayado */
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    /* Cambia el cursor a una mano cuando pasas el ratón por encima */
+    transition-duration: 0.4s;
+    /* Duración de la transición */
+}
+
+.boton-buscar:hover {
+    background-color: #45a049;
+    /* Cambia el color de fondo cuando pasas el ratón por encima */
+}
+
+.busqueda {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+    /* Espacio entre la búsqueda y la tabla */
+}
+
+.boton-buscar {
+    /* Los estilos de tu botón de búsqueda */
+    margin-left: 10px;
+    padding: 10px 20px;
+    /* Espacio entre el campo de entrada y el botón */
+}
+
+.campo-busqueda {
+    width: 150px; /* Ajusta el ancho del cuadro de texto */
+    padding: 5px 5px; /* Ajusta el relleno alrededor del texto */
+}
+
+.busqueda-derecha {
+    display: flex;
+    justify-content: flex-end;
+    /* Alinea los elementos a la derecha */
+    margin-bottom: 20px;
+    margin-right: 200px;
+    /* Espacio entre la búsqueda y la tabla */
+}
+
+.icono-ojo {
+    margin-left: 10px; /* Ajusta el espacio a la izquierda del icono */
+    color: black;
+  }
