--- a/ProyectoIntegrador/src/app/pages/admin/admin.component.html
+++ b/ProyectoIntegrador/src/app/pages/admin/admin.component.html
@@ -26,7 +26,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/inicio">Cerrar cesion</a>
+                            <a class="nav-link" (click)="logout()">Cerrar sesión</a>
                         </li>
                     </ul>
                 </div>
